# amplifier-module-tool-bash

./: README.md  pyproject.toml  test_fixes.py
amplifier_mod_tool_bash/: __init__.py
amplifier_mod_tool_bash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
amplifier_module_tool_bash/: __init__.py  safety.py
tests/: test_behavioral.py  test_max_concurrent.py  test_safety.py  test_validation.py  test_windows_bash.py  test_windows_bash_subprocess.py
