[project]
name = "amplifier-module-tool-bash"
version = "1.0.0"
description = "Reference tool module - Bash command execution for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
]

[project.entry-points."amplifier.modules"]
tool-bash = "amplifier_module_tool_bash:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_tool_bash",
]

[tool.hatch.metadata]
allow-direct-references = true
